<resources>
    <string name="app_name">CourtsAndProsecution</string>
    <string name="districtunit">District/Unit</string>
    <string name="policestation">Police Station</string>
    <string name="court">Court</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cntinue">Continue</string>
    <string name="checkbox">Skip This Screen</string>
    <string name="fir">FIR</string>
    <string name="firno">FIR No</string>
    <string name="courtcaseno">Court Case No</string>
    <string name="search">Search</string>
    <string name="policestation1">Police Station</string>
    <string name="crimeno">FIR No</string>
    <string name="chargesheetno">Charge Sheet No</string>
    <string name="chargesheetdate">Charge sheet Date</string>
    <string name="courtcaseno1">Court Case No</string>
    <string name="chargesheetstatus">Charge Sheet Status</string>
    <string name="changecasetypetocc">Change Case Type To CC</string>
    <string name="updatestatus">Update Status</string>
    <string name="my_link"><u>Enter Status</u></string>
    <string name="selectchargesheetstatus">Select Charge Sheet Status</string>
    <string name="dateoffilling">Date of filing ChargeSheet in the Court*</string>
    <string name="ddr">DDR/Inward/SR No </string>
    <string name="remarks">Remarks</string>
    <string name="enterstatus">Enter Status</string>
    <string name="dateoftakenfile">Date Of Taken File</string>
    <string name="casetype">Case Type</string>
    <string name="statuscourtcaseno">Court Case No</string>
    <string name="transferredto">Transferred To</string>
    <string name="transferredfrom">Transferred From</string>
    <string name="dateofcommital">Date of Commital</string>
    <string name="reasonfortransfer">Reason for Transfer</string>
    <string name="dateoftransferred">Date of Transferred</string>
    <string name="courtcasenogivenby">Court Case No.given by received court</string>
    <string name="star"> *</string>
    <string name="enter_status"><u>Enter Status</u></string>
    <string name="editstages"><u>Edit</u></string>
    <string name="select">--Select--</string>
</resources>
