<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:buttonTint="#135B97"
                android:text="@string/fir"
                />
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:buttonTint="#135B97"
                android:text="@string/courtcaseno"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/margintop"
                android:layout_weight=".4"
                android:background="@drawable/edit"
                android:hint=" Enter FIR number" />
        </TableRow>
        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:background="@color/colorAccent"
            android:textColor="#fff"/>
    </LinearLayout>

</LinearLayout>
