<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right">
        <TextView
            android:layout_marginTop="@dimen/margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="#135B97"
            android:text="Select Your"
            android:textStyle="bold"
            android:gravity="center" />
        <TableRow
            android:layout_marginTop="@dimen/margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/districtunit"
                android:textSize="@dimen/textsize"
                />
            <Spinner
                android:id="@+id/districtunit"
                android:layout_width="0dp"
                android:layout_height="@dimen/margintop"
                android:layout_weight=".5"
                android:background="@drawable/spinner">
            </Spinner>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/policestation"
                android:textSize="@dimen/textsize"
                />
            <Spinner
                android:id="@+id/policestation"
                android:layout_width="0dp"
                android:layout_height="@dimen/margintop"
                android:layout_weight=".5"
                android:background="@drawable/spinner">
            </Spinner>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/court"
                android:textSize="@dimen/textsize"
                 />
            <Spinner
                android:id="@+id/court"
                android:layout_width="0dp"
                android:layout_height="@dimen/margintop"
                android:layout_weight=".5"
                android:background="@drawable/spinner">
            </Spinner>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
            <Button
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="#ffffff"
                android:background="@color/colorAccent"
                android:gravity="center"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:background="#135B97"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:gravity="center"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
            <Button
                android:id="@+id/contnue"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:text="Continue"
                android:textColor="#ffffff"
                android:background="@color/colorAccent"
                android:gravity="center"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"/>
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:layout_marginLeft="@dimen/margin_left"
                android:buttonTint="@color/colorAccent"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:text="@string/checkbox"
                />

        </TableRow>

    </LinearLayout>

</LinearLayout>
