<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/table_border"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="@string/policestation1"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/policestation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".5"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:id="@+id/imagetext"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_left"
                android:textColor="#ffffff"
                android:background="@drawable/offender_ring"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/crimeno"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/courtno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".4"
                android:textSize="@dimen/textsize"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/chargesheetno"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/chargesheetno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".5"
                android:textSize="@dimen/textsize"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/chargesheetdate"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/chargesheetdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".5"
                android:textSize="@dimen/textsize"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/courtcaseno1"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/courtcaseno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".5"
                android:textSize="@dimen/textsize"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/chargesheetstatus"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/chargesheetstatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".5"
                android:textSize="@dimen/textsize"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/changecasetypetocc"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/changecasetypetocc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".5"
                android:textSize="@dimen/textsize"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="10dp"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".377"
                android:text="@string/updatestatus"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#135B97"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/updatestatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".2"
                android:text="@string/enter_status"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:id="@+id/updatestatus1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#135B97"
                android:layout_weight=".3"
                android:text=""
                android:textSize="@dimen/textsize"/>
        </TableRow>


          <TableRow
              android:visibility="gone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:layout_marginLeft="@dimen/margin_left"
              android:layout_marginRight="@dimen/margin_right"
              android:layout_marginBottom="10dp"
              android:weightSum="1">
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight=".377"
                  android:text="@string/updatestatus"
                  android:textSize="@dimen/textsize"/>
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text=":"
                  android:textColor="#135B97"
                  android:layout_weight=".1"/>
              <TextView
                  android:id="@+id/courtcasesrno"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:textColor="#135B97"
                  android:layout_weight=".2"
                  android:text="@string/enter_status"
                  android:textSize="@dimen/textsize"/>
          </TableRow>

          <TableRow
              android:visibility="gone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/margin_left"
              android:layout_marginRight="@dimen/margin_right"
              android:layout_marginBottom="10dp"
              android:weightSum="1">
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight=".377"
                  android:text="Courtcasenumber"
                  android:textSize="@dimen/textsize"/>
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text=":"
                  android:textColor="#135B97"
                  android:layout_weight=".1"/>
              <TextView
                  android:id="@+id/casenumber"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:textColor="#135B97"
                  android:layout_weight=".2"
                  android:text="@string/enter_status"
                  android:textSize="@dimen/textsize"/>

          </TableRow>
    </LinearLayout>

</LinearLayout>
