<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableRow
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_weight=".4"
            android:textColor="#135B97"
            android:textSize="@dimen/textsize"
            android:text="@string/dateoftakenfile" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:layout_weight=".1"
            />
        <EditText
            android:id="@+id/dateoftakenfile"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:background="@drawable/edit" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight=".4"
            android:textColor="#135B97"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/casetype"
            android:textSize="@dimen/textsize"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:textSize="@dimen/textsize" />
        <EditText
            android:id="@+id/casetype"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:background="@drawable/edit"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:textColor="#135B97"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/courtcaseno"
            android:textSize="@dimen/textsize"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:layout_weight=".1"
            />
        <EditText
            android:id="@+id/courtcasenumber"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:background="@drawable/edit" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight=".4"
            android:textColor="#135B97"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/remarks"
            android:textSize="@dimen/textsize"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:textSize="@dimen/textsize" />
        <EditText
            android:id="@+id/remarks"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight=".5"
            android:background="@drawable/edit"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/margintop"
        android:weightSum="1">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"/>
       <Button
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight=".3"
           android:text="CANCEL"
           android:textColor="#ffffff"
           style="@style/MyButton1"
           android:background="@color/colorAccent" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="Submit"
            style="@style/MyButton"
            android:textColor="#ffffff"
            android:background="#135B97" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"/>
    </TableRow>

</LinearLayout>
